--- a/less/custom.less
+++ b/less/custom.less
@@ -34,13 +34,12 @@
         z-index: 1;
     }
     .seconf_layer {
-    position: relative;
-    z-index: 2;
-    width: 100%;
-    height: 100vh;
-    .bgc;
-    background-image: url(img/base_layer.png);
-
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: 100vh;
+        .bgc;
+        background-image: url(img/base_layer.png);
     }
 
     .grid_layer {
@@ -53,10 +52,14 @@
         padding: 1em;
         padding-top: 10%;
 
+        .grid_text {
+            font-size: 1.5em;
+            width: 20%; 
+        }
+
         .name {
-          width: 20%;  
             .myname{
-                font-size: 2.5em;
+                font-size: 2em;
                 line-height: 1;
                 font-weight: bold;
             }
@@ -66,7 +69,8 @@
         }
 
         .titel {
-            width: 20%; 
+            padding-top: 3em;
+            
             .social_block {
                padding-top: 1em;
                width: 100%;
@@ -76,8 +80,7 @@
             .social {
                 width: 100%;
             }
-                ul {
-                    
+                ul {    
                     display: block;
                     text-align: center;
                     margin: 0; padding: 0;
@@ -102,12 +105,10 @@
             flex-direction: column; 
             height: 100%;
 
-            .name {
+            .grid_text {
                 width: 50%;  
             }
-
             .titel {
-                width: 50%;
                 color: #fff;
                 .social_block {                
                     ul {
