--- a/style.css
+++ b/style.css
@@ -94,11 +94,11 @@
 
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?k8m7de');
-  src:  url('fonts/icomoon.eot?k8m7de#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?k8m7de') format('truetype'),
-    url('fonts/icomoon.woff?k8m7de') format('woff'),
-    url('fonts/icomoon.svg?k8m7de#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?cykp1y');
+  src:  url('fonts/icomoon.eot?cykp1y#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?cykp1y') format('truetype'),
+    url('fonts/icomoon.woff?cykp1y') format('woff'),
+    url('fonts/icomoon.svg?cykp1y#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -107,7 +107,7 @@
 [class^="icon-"], [class*=" icon-"] {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
-  speak: none;
+  speak: never;
   font-style: normal;
   font-weight: normal;
   font-variant: normal;
@@ -119,322 +119,47 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-play:before {
+.icon-at-sign:before {
   content: "\e900";
 }
-.icon-airplay:before {
+.icon-award:before {
   content: "\e901";
 }
-.icon-arrow-down-left:before {
+.icon-book:before {
   content: "\e902";
 }
-.icon-arrow-down-right:before {
+.icon-book-open:before {
   content: "\e903";
 }
-.icon-arrow-left:before {
+.icon-facebook:before {
   content: "\e904";
 }
-.icon-arrow-left-circle:before {
+.icon-info:before {
   content: "\e905";
 }
-.icon-arrow-right:before {
+.icon-instagram:before {
   content: "\e906";
 }
-.icon-arrow-right-circle:before {
+.icon-linkedin:before {
   content: "\e907";
 }
-.icon-arrow-up:before {
+.icon-message-circle:before {
   content: "\e908";
 }
-.icon-arrow-up-circle:before {
+.icon-message-square:before {
   content: "\e909";
 }
-.icon-arrow-up-left:before {
+.icon-navigation:before {
   content: "\e90a";
 }
-.icon-arrow-up-right:before {
+.icon-send:before {
   content: "\e90b";
 }
-.icon-download:before {
+.icon-twitter:before {
   content: "\e90c";
 }
-.icon-download-cloud:before {
-  content: "\e90d";
-}
-.icon-message-circle:before {
-  content: "\e90e";
-}
-.icon-message-square:before {
-  content: "\e90f";
-}
-.icon-mic:before {
-  content: "\e910";
-}
-.icon-mic-off:before {
-  content: "\e911";
-}
-.icon-more-horizontal:before {
-  content: "\e912";
-}
-.icon-more-vertical:before {
-  content: "\e913";
-}
-.icon-navigation:before {
-  content: "\e914";
-}
-.icon-play1:before {
-  content: "\e915";
-}
-.icon-play-circle:before {
-  content: "\e916";
-}
-.icon-plus:before {
-  content: "\e917";
-}
-.icon-plus-circle:before {
-  content: "\e918";
-}
-.icon-plus-square:before {
-  content: "\e919";
-}
-.icon-video:before {
-  content: "\e91a";
-}
-.icon-video-off:before {
-  content: "\e91b";
-}
-.icon-voicemail:before {
-  content: "\e91c";
-}
-.icon-youtube1:before {
-  content: "\e91d";
-}
-.icon-adobeacrobatreader:before {
-  content: "\e91e";
-  color: #ee3f24;
-}
-.icon-behance1:before {
-  content: "\e91f";
-  color: #1769ff;
-}
-.icon-flickr1:before {
-  content: "\e920";
-  color: #0063dc;
-}
-.icon-googlepay:before {
-  content: "\e921";
-  color: #5f6368;
-}
-.icon-googlescholar:before {
-  content: "\e922";
-  color: #4885ed;
-}
-.icon-instagram1:before {
-  content: "\e923";
-  color: #e4405f;
-}
-.icon-linkedin1:before {
-  content: "\e924";
-  color: #0077b5;
-}
-.icon-mendeley:before {
-  content: "\e925";
-  color: #9d1620;
-}
-.icon-messenger:before {
-  content: "\e926";
-  color: #00b2ff;
-}
-.icon-researchgate:before {
-  content: "\e927";
-  color: #0cb;
-}
-.icon-ripple:before {
-  content: "\e928";
-  color: #0085c0;
-}
-.icon-telegram1:before {
-  content: "\e929";
-  color: #2ca5e0;
-}
-.icon-trello:before {
-  content: "\e92a";
-  color: #0079bf;
-}
-.icon-twitter:before {
-  content: "\e92b";
-  color: #1da1f2;
-}
-.icon-vk:before {
-  content: "\e92c";
-  color: #4680c2;
-}
-.icon-whatsapp:before {
-  content: "\e92d";
-  color: #25d366;
-}
-.icon-youtube3:before {
-  content: "\e92e";
-  color: #f00;
-}
-.icon-home:before {
-  content: "\e92f";
-}
-.icon-image:before {
-  content: "\e930";
-}
-.icon-images:before {
-  content: "\e931";
-}
-.icon-books:before {
-  content: "\e932";
-}
-.icon-library:before {
-  content: "\e933";
-}
-.icon-file-picture:before {
-  content: "\e934";
-}
-.icon-file-music:before {
-  content: "\e935";
-}
-.icon-file-play:before {
-  content: "\e936";
-}
-.icon-file-video:before {
-  content: "\e937";
-}
-.icon-file-zip:before {
-  content: "\e938";
-}
-.icon-qrcode:before {
-  content: "\e939";
-}
-.icon-phone:before {
-  content: "\e942";
-}
-.icon-phone-hang-up:before {
-  content: "\e943";
-}
-.icon-keyboard:before {
-  content: "\e955";
-}
-.icon-spinner:before {
-  content: "\e97a";
-}
-.icon-spinner2:before {
-  content: "\e97b";
-}
-.icon-spinner6:before {
-  content: "\e97f";
-}
-.icon-spinner7:before {
-  content: "\e980";
-}
-.icon-cloud-download:before {
-  content: "\e9c2";
-}
-.icon-arrow-up-left2:before {
-  content: "\ea39";
-}
-.icon-arrow-up2:before {
-  content: "\ea3a";
-}
-.icon-arrow-up-right2:before {
-  content: "\ea3b";
-}
-.icon-arrow-right2:before {
-  content: "\ea3c";
-}
-.icon-arrow-down-right2:before {
-  content: "\ea3d";
-}
-.icon-arrow-down2:before {
-  content: "\ea3e";
-}
-.icon-arrow-down-left2:before {
-  content: "\ea3f";
-}
-.icon-arrow-left2:before {
-  content: "\ea40";
-}
-.icon-checkbox-unchecked:before {
-  content: "\ea53";
-}
-.icon-radio-checked:before {
-  content: "\ea54";
-}
-.icon-radio-checked2:before {
-  content: "\ea55";
-}
-.icon-radio-unchecked:before {
-  content: "\ea56";
-}
-.icon-page-break:before {
-  content: "\ea68";
-}
-.icon-embed:before {
-  content: "\ea7f";
-}
-.icon-embed2:before {
-  content: "\ea80";
-}
-.icon-share2:before {
-  content: "\ea82";
-}
-.icon-instagram:before {
-  content: "\ea92";
-}
-.icon-telegram:before {
-  content: "\ea95";
-}
 .icon-youtube:before {
-  content: "\ea9d";
-}
-.icon-youtube2:before {
-  content: "\ea9e";
-}
-.icon-flickr:before {
-  content: "\eaa3";
-}
-.icon-flickr2:before {
-  content: "\eaa4";
-}
-.icon-flickr3:before {
-  content: "\eaa5";
-}
-.icon-flickr4:before {
-  content: "\eaa6";
-}
-.icon-behance:before {
-  content: "\eaa8";
-}
-.icon-behance2:before {
-  content: "\eaa9";
-}
-.icon-linkedin:before {
-  content: "\eac9";
-}
-.icon-linkedin2:before {
-  content: "\eaca";
-}
-.icon-file-pdf:before {
-  content: "\eadf";
-}
-.icon-file-openoffice:before {
-  content: "\eae0";
-}
-.icon-file-word:before {
-  content: "\eae1";
-}
-.icon-file-excel:before {
-  content: "\eae2";
-}
-.icon-libreoffice:before {
-  content: "\eae3";
-}
-.icon-html-five:before {
-  content: "\eae4";
+  content: "\e90d";
 }
 
 .bgc {
@@ -633,11 +358,12 @@ code {
   padding: 1em;
   padding-top: 10%;
 }
-.first_page .grid_layer .name {
+.first_page .grid_layer .grid_text {
+  font-size: 1.5em;
   width: 20%;
 }
 .first_page .grid_layer .name .myname {
-  font-size: 2.5em;
+  font-size: 2em;
   line-height: 1;
   font-weight: bold;
 }
@@ -645,7 +371,7 @@ code {
   padding-top: 1em;
 }
 .first_page .grid_layer .titel {
-  width: 20%;
+  padding-top: 3em;
 }
 .first_page .grid_layer .titel .social_block {
   padding-top: 1em;
@@ -679,11 +405,10 @@ code {
     flex-direction: column;
     height: 100%;
   }
-  .first_page .grid_layer .name {
+  .first_page .grid_layer .grid_text {
     width: 50%;
   }
   .first_page .grid_layer .titel {
-    width: 50%;
     color: #fff;
   }
   .first_page .grid_layer .titel .social_block ul li a {
