--- a/less/custom.less
+++ b/less/custom.less
@@ -34,10 +34,10 @@
         z-index: 1;
     }
     .seconf_layer {
-        position: relative;
-        z-index: 2;
-        width: 100%;
-        height: 100vh;
+        position: absolute;
+        top: 0;bottom: 0;right: 0;left: 0;
+        z-index: 3;
+        
         .bgc;
         background-image: url(img/base_layer.png);
     }
@@ -51,6 +51,11 @@
         align-content: stretch;
         padding: 1em;
         padding-top: 10%;
+
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        height: 100vh;
 
         .grid_text {
             font-size: 1.5em;
@@ -70,7 +75,7 @@
 
         .titel {
             padding-top: 3em;
-            
+
             .social_block {
                padding-top: 1em;
                width: 100%;
