--- a/style.css
+++ b/style.css
@@ -339,10 +339,12 @@ code {
   z-index: 1;
 }
 .first_page .seconf_layer {
-  position: relative;
-  z-index: 2;
-  width: 100%;
-  height: 100vh;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  z-index: 3;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: 50% 50%;
@@ -357,6 +359,10 @@ code {
   align-content: stretch;
   padding: 1em;
   padding-top: 10%;
+  position: relative;
+  z-index: 2;
+  width: 100%;
+  height: 100vh;
 }
 .first_page .grid_layer .grid_text {
   font-size: 1.5em;
