--- a/less/custom.less
+++ b/less/custom.less
@@ -30,7 +30,7 @@
         position: absolute;
         top: 0;right: 0;left: 0;bottom: 0;
         .bgc;
-        background-image: url(img/dotes.png);
+       // background-image: url(img/dotes.png);
         z-index: 1;
     }
     .seconf_layer {
