--- a/less/custom.less
+++ b/less/custom.less
@@ -111,6 +111,12 @@
             }
             .subt {
                 padding-top: 1em; 
+                abbr {
+                    text-decoration: none;
+                    background-color: #bdc3c7;
+                    border: 0;
+                    
+                }
                 .max(48em, {
                     display: none;
                  });     
