--- a/less/custom.less
+++ b/less/custom.less
@@ -36,7 +36,7 @@
     .seconf_layer {
         position: absolute;
         top: 0;bottom: 0;right: 0;left: 0;
-        z-index: 2;
+        z-index: 3;
         
         .bgc;
         background-image: url(img/base_layer.png);
@@ -94,9 +94,13 @@
         padding-top: 10%;
 
         position: relative;
-        z-index: 3;
+        z-index: 2;
         width: 100%;
         height: 100vh;
+
+        &:hover {
+            z-index: 4;
+        }
 
         .grid_text {
             font-size: 1.5em;
@@ -115,12 +119,34 @@
                     text-decoration: none;
                     background-color: #bdc3c7;
                     border: 0;
-                    
                 }
                 .max(48em, {
                     display: none;
                  });     
             }
+         .subt_other {
+
+            overflow-y: hidden;
+            min-height: 30%;
+           // border: 1px dotted #000;
+            margin-top: 10%;
+            font-size: 0.8em;
+            line-height: 1.3;
+
+            ul {
+                display: block;
+                margin: 0;padding: 0;
+                li {
+                    display: block;
+                    padding-bottom: 1rem;
+                    color:#bfbfbf;
+                }
+            }
+
+            .max(48em, {
+                display: none;
+             }); 
+         }   
         }
 
         .titel {
