--- a/less/custom.less
+++ b/less/custom.less
@@ -94,7 +94,7 @@
         padding-top: 10%;
 
         position: relative;
-        z-index: 2;
+        z-index: 4;
         width: 100%;
         height: 100vh;
 
@@ -125,7 +125,7 @@
                  });     
             }
          .subt_other {
-
+            display: none;
             overflow-y: hidden;
             min-height: 30%;
            // border: 1px dotted #000;
