--- a/less/custom.less
+++ b/less/custom.less
@@ -117,7 +117,7 @@
                 padding-top: 1em; 
                 abbr {
                     text-decoration: none;
-                    background-color: #bdc3c7;
+                  //  background-color: #bdc3c7;
                     border: 0;
                 }
                 .max(48em, {
