--- a/less/custom.less
+++ b/less/custom.less
@@ -104,7 +104,8 @@
 
         .grid_text {
             font-size: 1.5em;
-            width: 20%; 
+          //  width: 20%; 
+            flex-grow: 2;
         }
 
         .name {
@@ -117,7 +118,6 @@
                 padding-top: 1em; 
                 abbr {
                     text-decoration: none;
-                  //  background-color: #bdc3c7;
                     border: 0;
                 }
                 .max(48em, {
@@ -128,7 +128,6 @@
             display: none;
             overflow-y: hidden;
             min-height: 30%;
-           // border: 1px dotted #000;
             margin-top: 10%;
             font-size: 0.8em;
             line-height: 1.3;
@@ -151,36 +150,36 @@
 
         .titel {
             padding-top: 3em;
-
-            .social_block {
-               padding-top: 1em;
-               width: 100%;
-               position: relative;
-               z-index: 2;
-              
-            .social {
-                width: 100%;
-            }
-                ul {    
-                    display: block;
-                    text-align: center;
-                    margin: 0; padding: 0;
-                    padding-top: 0.5em;
-                    display: flex;
-                    justify-content: flex-start;
-                    align-items: center;
-    
-                    li {
-                        display: inline-block;
-                        padding-right: 1.2em;
-                        a {
-                            text-decoration: none;
-                            color: #000;
-                        }
-                    }
-                }
-            }
         }
+
+        .social_block {
+            padding-top: 1em;
+            position: relative;
+            z-index: 2;
+            align-self: flex-end;
+            flex-grow: 1;
+         .social {
+             width: 100%;
+            }
+             ul {    
+                 display: block;
+                 text-align: center;
+                 margin: 0; padding: 0;
+                 padding-top: 0.5em;
+                 display: flex;
+                 justify-content: flex-start;
+                 align-items: center;
+ 
+                 li {
+                     display: inline-block;
+                     padding-right: 1.2em;
+                     a {
+                         text-decoration: none;
+                         color: #fff;
+                     }
+                 }
+             }
+         }
 
         .max(48em, {  
             flex-direction: column; 
@@ -188,9 +187,10 @@
             .grid_text {
                 width: 50%;  
             }
+            .social_block {display: none;}
             .titel {
                 color: #fff;
-                .social_block {                
+            .social_block {                
                     ul {
                         li {
                             a {
