--- a/less/custom.less
+++ b/less/custom.less
@@ -168,7 +168,7 @@
                  margin: 0; padding: 0;
                  padding-top: 0.5em;
                  display: flex;
-                 justify-content: flex-start;
+                 justify-content: center;
                  align-items: center;
  
                  li {
