--- a/less/custom.less
+++ b/less/custom.less
@@ -87,7 +87,7 @@
         display: flex;
         flex-direction: row;
         flex-wrap: nowrap;
-        justify-content: space-between;
+        justify-content: space-evenly;
         align-items: flex-star;
         align-content: stretch;
         padding: 1em;
@@ -105,7 +105,7 @@
         .grid_text {
             font-size: 1.5em;
           //  width: 20%; 
-            flex-grow: 2;
+         //   flex-grow: 2;
         }
 
         .name {
@@ -158,7 +158,7 @@
             position: relative;
             z-index: 2;
             align-self: flex-end;
-            flex-grow: 1;
+          //  flex-grow: 1;
          .social {
              width: 100%;
             }
