--- a/less/custom.less
+++ b/less/custom.less
@@ -106,6 +106,7 @@
             font-size: 1.5em;
           //  width: 20%; 
          //   flex-grow: 2;
+         .max(48em, { flex-grow: 2; });
         }
 
         .name {
