--- a/less/custom.less
+++ b/less/custom.less
@@ -97,6 +97,7 @@
         z-index: 4;
         width: 100%;
         height: 100vh;
+        overflow: hidden;
 
         &:hover {
             z-index: 4;
